@startuml ej4
skinparam Monochrome true
skinparam classAttributeIconSize 0 

class Decodificador{
 +setCriterio(r: Recommend)
 +getRecomendaciones(): List<Peliculas>
}

Decodificador -up-> Pelicula : disponibles \n0..*
Decodificador -up-> Pelicula : reproducidas \n0..*
Decodificador -right-> Recommend : criterio \n1

class Pelicula{
 -String titulo
 -LocalDate anioEstreno
 -double puntaje
}

interface Recommend{
 +getRecomendaciones(disp : List<Peliculas>, rep: List<Peliculas>): List<Peliculas>
}

class Novedad{
 +getRecomendaciones(disp : List<Peliculas>, rep: List<Peliculas>): List<Peliculas>
}
class Similar{
 +getRecomendaciones(disp : List<Peliculas>, rep: List<Peliculas>): List<Peliculas>
}
class PorPuntaje{
 +getRecomendaciones(disp : List<Peliculas>, rep: List<Peliculas>): List<Peliculas>
}

Recommend <|.. Novedad
Recommend <|.. Similar
Recommend <|.. PorPuntaje
@enduml